examples/error/semantic.skald
var
    a int.
    b real.
    $ redefine var
    a int.
rav

main
    $ assign dif types
    a <- b. 

    $ oper type mismatch
    b <- 1,0 + 2.

    $ oper type incompatible
    b <- 1,0 % 2,0.

    $ negate not int
    b <- ! 1,0.
    
    $ undefined var
    c <- 2,0.

    $ condition not int
    if b do
        out a.
    fi

    $ chain comparison
    a <- 1 < 2 < 3.

    $ stop outside loop
    stop.
niam
